# amiga-game-vault

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
migrations/: 0001_init.sql  0002_enrichment.sql  0003_screenshot_kind.sql
src/: dat.rs  db.rs  edition.rs  error.rs  identity.rs  ingest.rs  lib.rs  main.rs  naming.rs  ranking.rs  service.rs  store.rs  web.rs
src/enrich/: mod.rs  openretro.rs
tests/: integration.rs
