[package]
name = "amiga-game-vault"
version = "0.1.0"
edition = "2021"
description = "Self-hosted ADF ROM manager: ingest, identify, deduplicate and normalize Amiga disk images"
license = "MIT"

[[bin]]
name = "amiga-game-vault"
path = "src/main.rs"

[lib]
name = "amiga_game_vault"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal"] }
axum = "0.8"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
md-5 = "0.11"
crc32fast = "1"
flate2 = "1"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
hex = "0.4"
thiserror = "2"
tempfile = "3"
